--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 .priority-matrix { text-align: center;
 }
 }
-.centered-main-page-element {
+.app-page {
   display: block;
   width: 500px;
   margin: 0 auto 0;
@@ -34,17 +34,17 @@ body {
 .task-row-wrapper {
   display: flex;
 }
-ul {
+#incomplete-tasks, #completed-tasks {
   margin:0;
   padding: 0px;
 }
-li, h3 {
+.task-list-name, .task-list {
   list-style:none;
 }
-input,button{
+.total-input, .btn-total{
   outline:none;
 }
-button {
+.btn-total {
   background: none;
   border: 0px;
   color: #888;
@@ -53,12 +53,12 @@ button {
   cursor: pointer;
   font-size: 15px;
 }
-button:hover {
+.btn-total:hover {
   color: #3a3a3a;
 }
 /* Heading */
-h3,
-label[for="new-task"] {
+.task-list-name,
+.new-task-label {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -67,7 +67,7 @@ label[for="new-task"] {
   margin: 0;
   text-transform: uppercase;
 }
-input[type="text"] {
+.all-inputs {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -79,24 +79,24 @@ input[type="text"] {
   font-family: Lato, sans-serif;
   color: #888;
 }
-input[type="text"]:focus {
+.all-inputs:focus {
   color: #333;
 }
 
 /* New Task */
-label[for="new-task"] {
+.new-task-label {
   display: block;
   margin: 0 0 20px;
 }
-input#new-task {
+#new-task {
   width: 318px;
 }
-p > button:hover {
+.btn-add:hover {
   color: #0fc57c;
 }
 
 /* Task list */
-li {
+.task-list {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -105,50 +105,50 @@ li {
   justify-content: space-between;
   align-items: center;
 }
-li > * {
+.task-list > * {
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.marker {
   margin: 0 10px;
 }
-li > label {
+.task-list > .task {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-li >    input[type="text"] {
+.task-list > .all-inputs {
   width: 226px
 }
-li > button.btn-delete:hover {
+.task-list > .btn-delete:hover {
   color: #cf2323;
 }
-button.btn-delete img {
+.btn-remove {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.btn-delete img:hover {
+.btn-remove:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+#completed-tasks .task {
   text-decoration: line-through
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.task-list .all-inputs {
   display:none
 }
 
-ul li.edit-mode input[type=text] {
+.edit-mode .all-inputs {
   display:inline-block;
   width:224px
 }
 
-ul li.edit-mode label {
+.edit-mode .change-task-text {
   display:none;
 }
