--- a/style.css
+++ b/style.css
@@ -18,7 +18,8 @@ body {
 }
 
 @media (max-width:768px) {
-.priority-matrix { text-align: center;
+.priority-matrix {
+  text-align: center;
 }
 }
 .app-page {
@@ -100,7 +101,6 @@ body {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
-
   display: flex;
   justify-content: space-between;
   align-items: center;
