--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
 .task {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 .task-row-wrapper {
   display: flex;
@@ -119,7 +119,7 @@ body {
   width: 226px;
 }
 .task-list > .all-inputs {
-  width: 226px
+  width: 226px;
 }
 .task-list > .btn-delete:hover {
   color: #cf2323;
@@ -135,18 +135,18 @@ body {
 
 /* Completed */
 #completed-tasks .task {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
 .task-list .all-inputs {
-  display: none
+  display: none;
 }
 
 .edit-mode .all-inputs {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
 .edit-mode .change-task-text {
